feat(template): introduce unified template management system
- Implement CRUD operations for templates, consolidating email and webhook templates into a single structure
- Create new business objects and repository interfaces for template management
- Enhance service layer to handle template requests and responses
- Update OpenAPI specifications to include new template endpoints
- Modify protobuf definitions to support template operations and validations
- Remove deprecated email and webhook template methods in favor of the new unified approach

--- a/internal/server/swagger/index.html
+++ b/internal/server/swagger/index.html
@@ -1,151 +1,72 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="./logo.svg">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=yes">
     <title>API 文档</title>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/styles/default.min.css">
+    <link rel="stylesheet" href="./app.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/highlight.min.js"></script>
     <script defer="defer" src="rapidoc-min.js"></script>
+    <script defer src="./app.js"></script>
 </head>
-<script>window.addEventListener('DOMContentLoaded', (event) => {
-    const docEl = document.getElementById('thedoc');
-    docEl.addEventListener('before-try', (e) => {
-        const jwt = localStorage.getItem('jwt');
-        e.detail.request.headers.append('Authorization', 'Bearer ' + jwt);
-    });
 
-});</script>
-<style>
-    #btnSave {
-        position: relative;
-        overflow: hidden;
-        z-index: 1;
-        padding: 0px 12px;
-        background: #1677ff;
-        color: #fff;
-        font-size: 30px;
-        border-radius: 0 6px 6px 0;
-        border: 0;
-        box-shadow: 0 2px 0 rgba(5, 145, 255, .1);
-        outline: none;
-        display: inline-block;
-        font-weight: 400;
-        white-space: nowrap;
-        text-align: center;
-        cursor: pointer;
-        transition: all .2s cubic-bezier(.645, .045, .355, 1);
-        user-select: none;
-        touch-action: manipulation;
-        line-height: 1.5714285714285714;
-    }
-
-    #auth {
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-        width: 100%;
-    }
-
-    #jwt-text {
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-        width: 100%;
-    }
-
-    #jwt {
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: start;
-        width: 100%;
-        border: 1px solid #d9d9d9;
-        /* 边框颜色渐变, 从#fa8c16到#1677ff */
-        /*background-image: linear-gradient(to right, #fa8c16, #1677ff);*/
-        background-position: 0 100%;
-        background-size: 200% 100%;
-        background-repeat: no-repeat;
-        /*color: #fff;*/
-
-        resize: none;
-        outline: none;
-        padding: 3px;
-    }
-
-    #jwt-btn {
-        position: relative;
-        overflow: hidden;
-        z-index: 1;
-        padding: 0 12px;
-        background: #fa8c16;
-        color: #fff;
-        font-size: 30px;
-        border-radius: 6px 0 0 6px;
-        border: 0;
-        box-shadow: 0 2px 0 rgba(5, 145, 255, .1);
-        outline: none;
-        display: inline-block;
-        font-weight: 400;
-        white-space: nowrap;
-        text-align: center;
-        cursor: pointer;
-        transition: all .2s cubic-bezier(.645, .045, .355, 1);
-        user-select: none;
-        touch-action: manipulation;
-        line-height: 1.5714285714285714;
-    }
-</style>
 <body>
 
-<rapi-doc
-        spec-url="./openapi.yaml"
-        id="thedoc"
-        render-style="focus"
-        schema-style="table"
-        show-method-in-nav-bar="true"
-        use-path-in-nav-bar="true"
-        show-components="true"
-        show-info="false"
-        show-header="false"
-        allow-search="true"
-        allow-advanced-search="true"
-        allow-spec-url-load="false"
-        allow-spec-file-download="false"
-        allow-server-selection="false"
-        allow-authentication="true"
-        update-route="false"
-        match-type="regex"
-        persist-auth="true"
-        regular-font="Nunito"
->
-    <img
-            slot="nav-logo"
-            src="./logo.svg" width="60px"
-    />
-    <div slot="auth" style="margin-left: 10px;" id="auth">
-        <label id="jwt-text">
-            <button id="jwt-btn">JWT</button>
-            <textarea name="jwt" placeholder="请输入JWT" rows="2" aria-keyshortcuts="true" id="jwt"></textarea>
-        </label>
-        <button id="btnSave" onclick="saveJwt()">保 存</button>
-    </div>
-</rapi-doc>
-</body>
-<script>
-    const jwt = localStorage.getItem('jwt');
-    const node = document.querySelector('textarea')
-    if (jwt) {
-        node.value = jwt;
-    }
+    <rapi-doc spec-url="./openapi.yaml" id="thedoc" render-style="focus" schema-style="table"
+        show-method-in-nav-bar="true" use-path-in-nav-bar="true" show-components="true" show-info="false"
+        show-header="false" allow-search="true" allow-advanced-search="true" allow-spec-url-load="false"
+        allow-spec-file-download="false" allow-server-selection="false" allow-authentication="true" update-route="false"
+        match-type="regex" persist-auth="true" regular-font="Nunito">
+        <img slot="nav-logo" src="./logo.svg" width="60px" />
+        <div slot="auth" style="margin-left: 10px;" id="auth">
+            <button class="toggle-section" onclick="toggleHeaderSection()">🔧 管理 HTTP Headers</button>
 
-    function saveJwt() {
-        const jwt = node.value;
-        localStorage.setItem('jwt', jwt);
-        alert('保存成功');
-    }
-</script>
+            <div class="header-section" id="headerSection">
+                <div class="header-controls">
+                    <select class="header-set-select" id="headerSetSelect" onchange="loadHeaderSet()">
+                        <option value="">-- 选择 Header 组 --</option>
+                    </select>
+                    <button class="btn-primary" onclick="showNewHeaderSet()">新建组</button>
+                    <button class="btn-danger" onclick="deleteHeaderSet()">删除组</button>
+                    <button class="btn-import" onclick="document.getElementById('importFile').click()">导入全部配置</button>
+                    <button class="btn-export" onclick="exportHeaderSets()">导出全部配置</button>
+                    <input type="file" id="importFile" class="file-input" accept=".json"
+                        onchange="importHeaderSets(event)" />
+                </div>
+
+                <div class="header-form" id="newSetForm">
+                    <input type="text" class="set-name-input" id="newSetName" placeholder="输入 Header 组名称" />
+                    <button class="btn-secondary" onclick="createNewHeaderSet()">创建组</button>
+                </div>
+
+                <div class="header-form active" id="editSetForm" style="display: none;">
+                    <div class="header-stats">
+                        <span id="headerStats">当前组: 未选择 | Headers: 0</span>
+                        <span>支持多组管理，自动保存到本地</span>
+                    </div>
+
+                    <div class="header-input-group">
+                        <input type="text" class="header-input" id="headerKey"
+                            placeholder="Header Key (例如: Authorization)" />
+                        <input type="text" class="header-input" id="headerValue"
+                            placeholder="Header Value (例如: Bearer token)" />
+                        <button class="btn-secondary" onclick="addHeader()">添加</button>
+                    </div>
+
+                    <div class="header-items" id="headerItems"></div>
+
+
+                    <button class="btn-primary" onclick="saveHeaderSet()">💾 保存当前组</button>
+                </div>
+            </div>
+        </div>
+    </rapi-doc>
+</body>
+<script defer src="./app.js"></script>
+
+</html>
+
 </html>
